# fromBook

./: .gitignore  README.md  meson.build
demo_platform/: Enemy.cpp  Enemy.h  GameOver.cpp  GameOver.h  MenuScene.cpp  MenuScene.h  PausMenu.cpp  PausMenu.h  PlayScene.cpp  PlayScene.h  Player.cpp  Player.h  main.cpp  meson.build
src/: Enemy.cpp  Game.cpp  GraphicalBaseObject.cpp  GraphicalObject.cpp  InputManager.cpp  Log.cpp  Player.cpp  SceneManager.cpp  TextureManager.cpp  main.cpp  meson.build
src/include/: BaseObject.h  BaseScene.h  Enemy.h  Game.h  GraphicalBaseObject.h  GraphicalObject.h  InputManager.h  Log.h  ObjectParams.h  Player.h  SceneManager.h  TextureManager.h  Vector2D.h
